--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Electron Fiddle</title>
+  <title>Smörgåsbord</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../node_modules/normalize.css/normalize.css" rel="stylesheet" />
   <link href="../node_modules/@blueprintjs/core/lib/css/blueprint.css" rel="stylesheet" />
